--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-tools": "^6.4.0",
     "mdx-deck": "^1.10.0",
     "mdx-deck-code-surfer": "^0.5.5",
+    "mdx-deck-live-code": "^1.0.1",
     "prism-react-renderer": "^0.1.5",
     "raw-loader": "^0.5.1"
   },
